--- a/templates/home.htm
+++ b/templates/home.htm
@@ -26,10 +26,11 @@
     </div>
     <center>
         <h1>Covid_19 Live Tracker</h1>
-    </center>
+    
     <div>
-        {{table | safe }}
+        {{table0 | safe }}
     </div>
+    </center>
     <center><div><h5>  © 2020, by Siddhant kumar Mishra (SKM), Covid_19 Tracker
           </h5></div></center>
 
